--- a/store2realm/build.gradle
+++ b/store2realm/build.gradle
@@ -6,7 +6,7 @@ group='com.github.playmoweb'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "25.0.3"
 
     defaultConfig {
         minSdkVersion 16
@@ -33,6 +33,6 @@ dependencies {
 
     compile "io.reactivex:rxandroid:1.2.1"
     compile 'com.github.playmoweb:store2store:2.0.4'
-
+    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
     testCompile 'junit:junit:4.12'
 }
