add submodule store2store to project

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,2 @@
-include ':store2realm'
+include ':store2realm', 'store2store'
+project(':store2store').projectDir = new File('submodule/store2store')
