--- a/store2realm/build.gradle
+++ b/store2realm/build.gradle
@@ -5,12 +5,12 @@ apply plugin: 'realm-android'
 group='com.github.playmoweb'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
     buildToolsVersion "25.0.3"
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
 
@@ -26,13 +26,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
-    compile "io.reactivex:rxandroid:1.2.1"
-    compile 'com.github.playmoweb:store2store:2.0.4'
-    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     testCompile 'junit:junit:4.12'
+    compile project(':store2store')
 }
