Remove submodule git - remove rxjava1 dependencies

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,1 @@
-include ':store2realm', 'store2store'
-project(':store2store').projectDir = new File('submodule/store2store')
+include ':store2realm'
