--- a/store2realm/build.gradle
+++ b/store2realm/build.gradle
@@ -6,7 +6,7 @@ group='com.github.playmoweb'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "25.0.3"
+    buildToolsVersion "26.0.1"
 
     defaultConfig {
         minSdkVersion 16
@@ -30,8 +30,8 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'io.reactivex:rxandroid:1.2.1'
+
+    compile 'com.github.playmoweb:store2store:rxjava2-SNAPSHOT'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     testCompile 'junit:junit:4.12'
-    compile project(':store2store')
 }
