--- a/example/build.gradle
+++ b/example/build.gradle
@@ -49,9 +49,10 @@ dependencies {
     compile "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
     compile "com.squareup.retrofit2:converter-gson:2.3.0"
     compile "com.squareup.okhttp3:okhttp:3.4.1"
+    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     compile "org.parceler:parceler-api:1.1.5"
     annotationProcessor "org.parceler:parceler:1.1.5"
-    compile 'com.github.playmoweb:store2realm:3bb88b51c6'
+    compile 'com.github.playmoweb:store2realm:rxjava2-SNAPSHOT'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     testCompile 'junit:junit:4.12'
 }
