Migrate to new api of rxjava2

--- a/store2realm/build.gradle
+++ b/store2realm/build.gradle
@@ -2,8 +2,6 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'realm-android'
 
-group='com.github.playmoweb'
-
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
@@ -31,7 +29,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.github.playmoweb:store2store:rxjava2-SNAPSHOT'
+    compile 'com.github.playmoweb:store2store:flow-SNAPSHOT'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     testCompile 'junit:junit:4.12'
 }
