--- a/example/build.gradle
+++ b/example/build.gradle
@@ -33,6 +33,9 @@ android {
         exclude 'META-INF/ASL2.0'
         exclude 'META-INF/services/javax.annotation.processing.Processor'
     }
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:2.0.1'
+    }
 }
 
 
@@ -41,7 +44,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.+'
+
+    compile project(":store2realm") // use local library
+
+    compile 'com.android.support:appcompat-v7:26.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile "com.google.dagger:dagger:2.10"
     annotationProcessor "com.google.dagger:dagger-compiler:2.10"
@@ -52,7 +58,6 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     compile "org.parceler:parceler-api:1.1.5"
     annotationProcessor "org.parceler:parceler:1.1.5"
-    compile 'com.github.playmoweb:store2realm:rxjava2-SNAPSHOT'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     testCompile 'junit:junit:4.12'
 }
