Fix example reference to ream lib

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -45,8 +45,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    // compile project(":store2realm") // use local library
-    compile 'com.github.playmoweb:store2realm:3.0.0'
+    compile project(":store2realm") // use local library
+    // compile 'com.github.playmoweb:store2realm:3.0.0'
 
     compile 'com.android.support:appcompat-v7:26.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
