--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,10 @@
 buildscript {
     repositories {
         jcenter()
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
+        google();
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.2'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         classpath "io.realm:realm-gradle-plugin:3.7.2"
 
@@ -23,10 +20,7 @@ allprojects {
         jcenter()
         maven { url 'https://jitpack.io' }
         maven { url 'https://maven.google.com' }
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
+        google();
     }
 }
 
