--- a/store2realm/build.gradle
+++ b/store2realm/build.gradle
@@ -29,7 +29,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    implementation 'com.github.playmoweb:store2store:3.0.4'
+    api 'com.github.playmoweb:store2store:3.0.4'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     testImplementation 'junit:junit:4.12'
 }
