--- a/example/build.gradle
+++ b/example/build.gradle
@@ -6,12 +6,12 @@ apply plugin: 'realm-android'
 
 android {
     namespace 'com.playmoweb.store2realm.example'
-    compileSdkVersion 26
+    compileSdkVersion 34
 
     defaultConfig {
         applicationId "com.playmoweb.store2realm.example"
         minSdkVersion 16
-        targetSdkVersion 35
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
 
@@ -50,17 +50,17 @@ dependencies {
     implementation project(":store2realm") // use local library
     // compile 'com.github.playmoweb:store2realm:3.0.0'
 
-    implementation 'com.android.support:appcompat-v7:26.0.1'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation "com.google.dagger:dagger:2.10"
-    annotationProcessor "com.google.dagger:dagger-compiler:2.10"
+    implementation "com.google.dagger:dagger:2.17"
+    annotationProcessor "com.google.dagger:dagger-compiler:2.17"
     implementation "com.squareup.retrofit2:retrofit:2.3.0"
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
     implementation "com.squareup.retrofit2:converter-gson:2.3.0"
     implementation "com.squareup.okhttp3:okhttp:3.4.1"
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-    implementation "org.parceler:parceler-api:1.1.5"
-    annotationProcessor "org.parceler:parceler:1.1.5"
+    implementation "org.parceler:parceler-api:1.1.12"
+    annotationProcessor "org.parceler:parceler:1.1.12"
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     testImplementation 'junit:junit:4.12'
 }
